# holt

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PERF_FINDINGS.md  PGO.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  nightly.yml  release.yml
benches/: Cargo.toml  README.md  RESULTS.md  cold_io.rs  concurrent.rs  cow_snapshot.rs  eval_cgroup_rss.sh  eval_cold.sh  main.rs  regression.rs  stress.rs
crates/holt-ffi/: Cargo.toml  README.md
crates/holt-ffi/examples/: abi_smoke.c
crates/holt-ffi/src/: lib.rs
docs/: per-node-latch-phase2b.md
docs/design/: cold-read-HANDOFF.md  io-optimization.md  scale-curve-findings.md  wal-ring.md
examples/: basic_kv.rs  session_store.rs  wal_crash_soak.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: atomic_model.rs  db_model.rs  read_index_model.rs
scripts/: README.md  ubuntu-bench-rocksdb.sh  ubuntu-validate.sh
src/: lib.rs  metrics.rs
src/api/: atomic.rs  builder.rs  checkpoint.rs  config.rs  db.rs  errors.rs  mod.rs  snapshot.rs  stats.rs  (+4 more)
tests/: batch.rs  bench_bg_checkpointer.rs  bench_contention_p95.rs  bench_large_tree_shape.rs  bench_manifest_checkpoint.rs  checkpoint.rs  checkpoint_failpoint.rs  checkpointer_integration.rs  layout_invariants.rs  properties.rs  relaxed_batch.rs  scan_stats.rs  scatter.rs  sm_durable.rs  sm_durable_failpoint.rs  snapshot.rs  system_faults.rs  tree_smoke.rs  wal_tree_integration.rs  write_delete_churn.rs
verified/: README.md
(+94 files in other folders)
