[package]
name = "holt-ffi"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "C ABI wrapper for the holt metadata storage engine."
license = "MIT"
publish = false

[lib]
name = "holt_ffi"
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = []
io-uring = ["holt/io-uring"]
metrics = ["holt/metrics"]
tracing = ["holt/tracing"]

[dependencies]
holt = { path = "../..", default-features = false }

[dev-dependencies]
tempfile = "3"
